--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <li class="bon-li1">
           <div class="bonli1">
             <div class="bon-gu1">UI 구현</div>
-            <button class="bon-ja1">자세히 보기</button>
+            <button class="bon-ja1">자세히 보기 차 수정 </button>
           </div>
         </li>
         <li class="bon-li2">
           <div class="bonli2">
-            <div class="bon-gu2">UI 구현</div>
+            <div class="bon-gu2">UI 구현 1차수정 </div>
             <button class="bon-ja2">자세히 보기</button>
           </div>
         </li>
